continue switching over to Open Rail Data, new tfgm data version